--- a/kustomization/components/longhorn/storageclass.yml
+++ b/kustomization/components/longhorn/storageclass.yml
@@ -22,7 +22,7 @@ reclaimPolicy: Retain
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: longhorn-encrypted-no-replica
+  name: longhorn-encrypted-replicated-database
 allowVolumeExpansion: true
 parameters:
   csi.storage.k8s.io/node-publish-secret-name: longhorn
@@ -32,9 +32,9 @@ parameters:
   csi.storage.k8s.io/provisioner-secret-name: longhorn
   csi.storage.k8s.io/provisioner-secret-namespace: longhorn-system
   dataLocality: best-effort
+  diskSelector: nvme
   encrypted: "true"
   fromBackup: ""
   numberOfReplicas: "1"
-  staleReplicaTimeout: "2880" # 48 hours in minutes
 provisioner: driver.longhorn.io
 reclaimPolicy: Retain
