--- a/kustomization/overlays/prod/traefik/postgresql.yml
+++ b/kustomization/overlays/prod/traefik/postgresql.yml
@@ -17,3 +17,24 @@ spec:
       defaultUsers: true
       schemas:
         public: {}
+---
+apiVersion: acid.zalan.do/v1
+kind: postgresql
+metadata:
+  name: authelia-storage-16-pg
+spec:
+  clone:
+    cluster: authelia-storage-pg
+  teamId: authelia
+  volume:
+    size: 10Gi
+    storageClass: longhorn-encrypted-replicated-database
+  numberOfInstances: 2
+  podPriorityClassName: critical-application-infra
+  postgresql:
+    version: "16"
+  preparedDatabases:
+    authelia:
+      defaultUsers: true
+      schemas:
+        public: {}
