--- a/kustomization/overlays/prod/traefik/patches/add_authelia_postgres_secrets.yml
+++ b/kustomization/overlays/prod/traefik/patches/add_authelia_postgres_secrets.yml
@@ -14,7 +14,7 @@ spec:
             - name: AUTHELIA_STORAGE_POSTGRES_USERNAME
               valueFrom:
                 secretKeyRef:
-                  name: authelia-owner-user.authelia-storage-pg.credentials.postgresql.acid.zalan.do
+                  name: authelia-owner-user.authelia-storage-16-pg.credentials.postgresql.acid.zalan.do
                   key: username
           volumeMounts:
             - mountPath: /postgresql-secrets
@@ -23,4 +23,4 @@ spec:
       volumes:
         - name: postgresql-secrets
           secret:
-            secretName: authelia-owner-user.authelia-storage-pg.credentials.postgresql.acid.zalan.do
+            secretName: authelia-owner-user.authelia-storage-16-pg.credentials.postgresql.acid.zalan.do
