include ingress.yml for traefik namespace

--- a/kustomization/overlays/prod/traefik/kustomization.yml
+++ b/kustomization/overlays/prod/traefik/kustomization.yml
@@ -60,6 +60,7 @@ patches:
   #     name: traefik-deployment
 resources:
   - namespace.yml
+  - ingress.yml
   - postgresql.yml
   - redisreplication.yml
   - redissentinel.yml
