--- a/host_vars/tartarus01.tswn.us.yml
+++ b/host_vars/tartarus01.tswn.us.yml
@@ -54,6 +54,9 @@ vyos_firewall_global__group:
       description: Ports used by the Jellyfin server
       members:
         - port: 7359
+    - name: TRAEFIK-EXT
+      members:
+        - port: 8443
     - name: UNIFI-DEVICE-TCP
       description: Ports used by the Unifi Controller to talk to devices over TCP
       members:
