--- a/firewall_zones/vyos_home/services/from-remote-tun-ipv4.yml
+++ b/firewall_zones/vyos_home/services/from-remote-tun-ipv4.yml
@@ -75,3 +75,12 @@
       address_group: TRAEFIK-v4
       port_group: TRAEFIK-EXT
   protocol: tcp
+- action: accept
+  description: Allow Factorio Traffic
+  destination:
+    group:
+      address_group: FACTORIO-v4
+      port_group: FACTORIO
+  protocol: udp
+  state:
+    new: true
