--- a/firewall_zones/vyos_remote/maccabeus/from-wan-ipv4.yml
+++ b/firewall_zones/vyos_remote/maccabeus/from-wan-ipv4.yml
@@ -32,3 +32,12 @@
     group:
       port_group: TRAEFIK-EXT
   protocol: tcp
+- action: accept
+  description: Allow Factorio Traffic
+  destination:
+    group:
+      address_group: FACTORIO-v4
+      port_group: FACTORIO
+  protocol: udp
+  state:
+    new: true
