--- a/firewall_zones/vyos_remote/wan/from-maccabeus-ipv4.yml
+++ b/firewall_zones/vyos_remote/wan/from-maccabeus-ipv4.yml
@@ -26,3 +26,12 @@
       port_group: VALHEIM
   state:
     new: true
+- action: accept
+  description: Allow Factorio Traffic
+  protocol: udp
+  source:
+    group:
+      address_group: FACTORIO-v4
+      port_group: FACTORIO
+  state:
+    new: true
