--- a/kustomization/overlays/prod/traefik/configmap/authelia-users.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-users.yml
@@ -3,10 +3,15 @@ users:
   gwbraga:
     disabled: false
     displayname: Gabi
-    password: $argon2id$v=19$m=65536,t=3,p=4$i+Kwkz4n6H71MvCR9aox+Q$aMgqPVxQBjt25tUKLGYSAr6Zymp+Rs9ow27ESSdkdYg
     email: gwbraga@gmail.com
+    password: $argon2id$v=19$m=65536,t=3,p=4$i+Kwkz4n6H71MvCR9aox+Q$aMgqPVxQBjt25tUKLGYSAr6Zymp+Rs9ow27ESSdkdYg
   sdwilsh:
     disabled: false
     displayname: Shawn
-    password: $argon2id$v=19$m=65536,t=3,p=4$d+0GxNVFTe3vv38Ic4Ssrw$N7MNzSrpEIpMDsQqk8Rxy8ellmYZRUVCNu02svY6pf8
     email: sdwilsh@pm.me
+    password: $argon2id$v=19$m=65536,t=3,p=4$d+0GxNVFTe3vv38Ic4Ssrw$N7MNzSrpEIpMDsQqk8Rxy8ellmYZRUVCNu02svY6pf8
+  Adelous:
+    disabled: false
+    displayname: Travis
+    email: ktcord@gmail.com
+    password: $argon2id$v=19$m=65536,t=3,p=4$H8LcK+cAcyp9Ao0v5hDdzw$4+yn3ckYCuZGvcMinvBRIidOj50u7fodpoVbnXdZZyw
