pin jellyfin to a specific node for now

--- a/kustomization/overlays/prod/aventertainment/kustomization.yml
+++ b/kustomization/overlays/prod/aventertainment/kustomization.yml
@@ -7,6 +7,10 @@ components:
   - ../../../components/tdarr
 namespace: aventertainment
 patches:
+  - path: patches/add_jellyfin_nodeName.yml
+    target:
+      kind: StatefulSet
+      name: jellyfin-statefulset
   - path: patches/add_jellyfin_volumes.yml
     target:
       kind: StatefulSet
