add video and render groups

--- a/kustomization/overlays/prod/aventertainment/patches/add_jellyfin_hardware_acc_reqs.yml
+++ b/kustomization/overlays/prod/aventertainment/patches/add_jellyfin_hardware_acc_reqs.yml
@@ -18,4 +18,8 @@ spec:
             requests:
               squat.ai/kfd: 1
               squat.ai/render: 1
+          securityContext:
+            supplementalGroups:
+              - 44 # video
+              - 109 # render
       nodeName: worker03
