Add a socat sidecar for Jellyfin to work-around changes to Auto-Discovery
See https://github.com/jellyfin/jellyfin/issues/11309 for more details.

--- a/kustomization/components/jellyfin/kustomization.yml
+++ b/kustomization/components/jellyfin/kustomization.yml
@@ -3,6 +3,8 @@ apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 
 images:
+  - name: alpine/socat
+    newTag: 1.7.4.4
   - name: jellyfin/jellyfin
     newTag: 10.8.13
 resources:
