--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -42,6 +42,7 @@ access_control:
         - ^/.external_auth=.$
         - ^/api.*$
         - ^/auth/token.*$
+        - ^/frontend_latest/.*$
         - ^/hacsfiles/iconset.js$
         - ^/service_worker.js$
         - ^/static/.*$
