--- a/kustomization/overlays/prod/aventertainment/namespace.yml
+++ b/kustomization/overlays/prod/aventertainment/namespace.yml
@@ -5,4 +5,6 @@ metadata:
   labels:
     pod-security.kubernetes.io/enforce: baseline
     pod-security.kubernetes.io/enforce-version: latest
+    pod-security.kubernetes.io/warn: restricted
+    pod-security.kubernetes.io/warn-version: latest
   name: aventertainment
