add lg-git to dns

--- a/group_vars/dns.yml
+++ b/group_vars/dns.yml
@@ -221,6 +221,7 @@ bind_zones:
           - homeassistant.hogs
           - imap.hogs
           - jellyfin
+          - lg-git
           - longhorn.hogs
           - mqtt.hogs
           - nas.hogs
