--- a/kustomization/overlays/prod/lg/kustomization.yml
+++ b/kustomization/overlays/prod/lg/kustomization.yml
@@ -14,6 +14,11 @@ patches:
     target:
       kind: Deployment
       name: gitea
+  - path: patches/set_gitea_server.yml
+    target:
+      kind: Deployment
+      name: gitea
 resources:
   - namespace.yml
+  - ingress.yml
   - redis.yml
