--- a/kustomization/overlays/prod/lg/patches/set_gitea_admin.yml
+++ b/kustomization/overlays/prod/lg/patches/set_gitea_admin.yml
@@ -7,6 +7,7 @@ spec:
   template:
     spec:
       initContainers:
+        - name: init-directories # This must run before init-app-ini
         - env:
             - name: GITEA__ADMIN__EMAIL
               valueFrom:
