add lg-git openid conf to authelia

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -61,6 +61,23 @@ access_control:
     - domain: "*.tswn.us"
       policy: two_factor
 
+identity_providers:
+  oidc:
+    clients:
+      - authorization_policy: two_factor
+        client_id: eAsie4x9acvgRmD.KnZHnHm0puL0J39Bsv8NBOSEyZcIQ-NYwH-YB1N.eiZJuCGl.10RCf~5
+        client_name: LG Gitea
+        client_secret: $pbkdf2-sha512$310000$0jkP5WESMf3CEhy/YWHW2A$BgqIFihKFIzWxsaoP.XSIYtIgsVHPy49EiYni3qQqczDYTJqd1arcfStrAjE/vQ9mSgZFaEeS.g2iJmp2KSAeg
+        public: false
+        redirect_uris:
+          - https://lg-git.tswn.us/user/oauth2/authelia/callback
+        scopes:
+          - openid
+          - email
+          - profile
+        userinfo_signed_response_alg: none
+        token_endpoint_auth_method: client_secret_basic
+
 # https://www.authelia.com/configuration/notifications/introduction/
 notifier:
   smtp:
