combine different traefik patches in renovate

--- a/renovate.json
+++ b/renovate.json
@@ -32,6 +32,12 @@
       ]
     },
     {
+      "groupName": "traefik",
+      "matchPackagePatterns": [
+        "traefik"
+      ]
+    },
+    {
       "groupName": "vector",
       "matchPackagePatterns": [
         "vector"
