bypass authelia for navidrome on home networks

--- a/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
+++ b/kustomization/overlays/prod/traefik/configmap/authelia-config.yml
@@ -50,6 +50,10 @@ access_control:
       networks:
         - home
       policy: bypass
+    - domain: navidrome.tswn.us
+      networks:
+        - home
+      policy: bypass
     - domain: opensprinkler.hogs.tswn.us
       networks:
         - home
