--- a/requirements.yml
+++ b/requirements.yml
@@ -3,7 +3,12 @@ roles:
   - name: bertvv.bind
     version: v5.1.0
   - name: mrlesmithjr.netplan
-    version: v0.4.1
+    # version: v0.4.1
+    # For now, use git because no release that works with 23.10+
+    # https://github.com/mrlesmithjr/ansible-netplan/pull/49
+    scm: git
+    src: https://github.com/mrlesmithjr/ansible-netplan.git
+    version: master
   - name: nickjj.docker
     version: v2.4.0
 collections:
