stop running zabbix

--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -36,4 +36,4 @@ common__ntp_pool: "pool.ntp.hogs.tswn.us"
 common__be_ntp_server: no
 
 # If Zabbix should be setup and managed.
-common__zabbix_enabled: yes
+common__zabbix_enabled: no
