mount authelia-users.yml in container

--- a/kustomization/overlays/prod/traefik/kustomization.yml
+++ b/kustomization/overlays/prod/traefik/kustomization.yml
@@ -32,6 +32,10 @@ patches:
     target:
       kind: Deployment
       name: authelia-deployment
+  - path: patches/add_authelia_user_secrets.yml
+    target:
+      kind: Deployment
+      name: authelia-deployment
   - path: patches/allow_external_name_services.yml
     target:
       kind: Deployment
